@@ -26,3 +26,4 @@ hs_err_pid*
 /src/WIP/*
 /build/*
 /arcadeflex.cfg
+/roms/*
