@@ -6,9 +6,19 @@ package mess.machine;
 
 import static WIP.arcadeflex.libc_v2.*;
 import static WIP.arcadeflex.fucPtr.*;
+import static WIP.mame.mame.Machine;
 import static consoleflex.funcPtr.*;
+import static mess.messH.*;
+import static mess.mess.*;
 import static old.mame.inptport.*;
 import static mess.vidhrdw.tms9928a.*;
+import old.arcadeflex.libc_old.FILE;
+import static old.arcadeflex.osdepend.*;
+import static old.arcadeflex.fileio.*;
+import static arcadeflex.libc.cstring.*;
+import static WIP.mame.osdependH.*;
+import static mame.commonH.*;
+import static old.mame.common.*;
 
 public class coleco {
 
@@ -21,68 +31,66 @@ public class coleco {
     //static UBytePtr ROM;
     public static io_idPtr coleco_id_rom = new io_idPtr() {
         public int handler(int id) {
-            throw new UnsupportedOperationException("unimplemented");
-            /*TODO*///        FILE * romfile;
-/*TODO*///         unsigned char magic[2];
-/*TODO*/// 		int retval = ID_FAILED;
-/*TODO*/// 
-/*TODO*///         logerror("---------coleco_id_rom-----\n");
-/*TODO*///         logerror("Gamename is %s\n", device_filename(IO_CARTSLOT, id));
-/*TODO*///         logerror("filetype is %d\n", OSD_FILETYPE_IMAGE_R);
-/*TODO*/// 
-/*TODO*///         /* If no file was specified, don't bother */
-/*TODO*///         if (!device_filename(IO_CARTSLOT, id) || !strlen(device_filename(IO_CARTSLOT, id))) {
-/*TODO*///             return ID_OK;
-/*TODO*///         }
-/*TODO*/// 
-/*TODO*///         if (!(romfile = image_fopen(IO_CARTSLOT, id, OSD_FILETYPE_IMAGE_R, 0))) {
-/*TODO*///             return ID_FAILED;
-/*TODO*///         }
-/*TODO*///
-/*TODO*///         retval = 0;
-            /* Verify the file is in Colecovision format */
- /*TODO*///         osd_fread(romfile, magic, 2);
-/*TODO*///         if ((magic[0] == 0xAA) && (magic[1] == 0x55)) {
-/*TODO*///             retval = ID_OK;
-/*TODO*///         }
-/*TODO*///         if ((magic[0] == 0x55) && (magic[1] == 0xAA)) {
-/*TODO*///             retval = ID_OK;
-/*TODO*///         }
+            Object romfile;
+            /*unsigned*/ char[] magic = new char[2];
+            int retval = ID_FAILED;
 
-            /*TODO*///         osd_fclose(romfile);
-/*TODO*///         return retval;
+            logerror("---------coleco_id_rom-----\n");
+            logerror("Gamename is %s\n", device_filename(IO_CARTSLOT, id));
+            logerror("filetype is %d\n", OSD_FILETYPE_IMAGE_R);
+
+            /* If no file was specified, don't bother */
+            if (device_filename(IO_CARTSLOT, id) == null || strlen(device_filename(IO_CARTSLOT, id)) == 0) {
+                return ID_OK;
+            }
+
+            if ((romfile = image_fopen(IO_CARTSLOT, id, OSD_FILETYPE_IMAGE_R, 0)) == null) {
+                return ID_FAILED;
+            }
+
+            retval = 0;
+            /* Verify the file is in Colecovision format */
+            osd_fread(romfile, magic, 2);
+            if ((magic[0] == 0xAA) && (magic[1] == 0x55)) {
+                retval = ID_OK;
+            }
+            if ((magic[0] == 0x55) && (magic[1] == 0xAA)) {
+                retval = ID_OK;
+            }
+
+            osd_fclose(romfile);
+            return retval;
         }
     };
 
     public static io_initPtr coleco_load_rom = new io_initPtr() {
         public int handler(int id) {
-            throw new UnsupportedOperationException("unimplemented");
-            /*TODO*///         FILE * cartfile;
-/*TODO*/// 
-/*TODO*///         UINT8 * ROM = memory_region(REGION_CPU1);
-/*TODO*/// 
-/*TODO*///         logerror("---------coleco_load_rom-----\n");
-/*TODO*///         logerror("filetype is %d  \n", OSD_FILETYPE_IMAGE_R);
-/*TODO*///         logerror("Machine.game.name is %s  \n", Machine.gamedrv.name);
-/*TODO*///         logerror("romname[0] is %s  \n", device_filename(IO_CARTSLOT, id));
+            Object cartfile;
+
+            UBytePtr ROM = memory_region(REGION_CPU1);
+
+            logerror("---------coleco_load_rom-----\n");
+            logerror("filetype is %d  \n", OSD_FILETYPE_IMAGE_R);
+            logerror("Machine.game.name is %s  \n", Machine.gamedrv.name);
+            logerror("romname[0] is %s  \n", device_filename(IO_CARTSLOT, id));
 
             /* A cartridge isn't strictly mandatory, but it's recommended */
- /*TODO*///         cartfile = NULL;
-/*TODO*///         if (!device_filename(IO_CARTSLOT, id) || !strlen(device_filename(IO_CARTSLOT, id))) {
-/*TODO*///             logerror("Coleco - warning: no cartridge specified!\n");
-/*TODO*///         } else if (!(cartfile = image_fopen(IO_CARTSLOT, id, OSD_FILETYPE_IMAGE_R, 0))) {
-/*TODO*///             logerror("Coleco - Unable to locate cartridge: %s\n", device_filename(IO_CARTSLOT, id));
-/*TODO*///             return 1;
-/*TODO*///         }
+            cartfile = null;
+            if (device_filename(IO_CARTSLOT, id) == null || strlen(device_filename(IO_CARTSLOT, id)) == 0) {
+                logerror("Coleco - warning: no cartridge specified!\n");
+            } else if ((cartfile = image_fopen(IO_CARTSLOT, id, OSD_FILETYPE_IMAGE_R, 0)) == null) {
+                logerror("Coleco - Unable to locate cartridge: %s\n", device_filename(IO_CARTSLOT, id));
+                return 1;
+            }
 
-            /*TODO*///         coleco_cartridge_rom =  & (ROM[0x8000]);
+            coleco_cartridge_rom = new UBytePtr(ROM, 0x8000);
 
-            /*TODO*///         if (cartfile != NULL) {
-/*TODO*///             osd_fread(cartfile, coleco_cartridge_rom, 0x8000);
-/*TODO*///             osd_fclose(cartfile);
-/*TODO*///         }
+            if (cartfile != null) {
+                osd_fread(cartfile, coleco_cartridge_rom, 0x8000);
+                osd_fclose(cartfile);
+            }
 
-            /*TODO*///         return 0;
+            return 0;
         }
     };
 
